Migrate src/test/java to Java 21
https://docs.openrewrite.org/recipes/java/migrate/upgradetojava21

Modernize test code to use java 21 latest features

$ mvn -U org.openrewrite.maven:rewrite-maven-plugin:run -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-migrate-java:RELEASE -Drewrite.activeRecipes=org.openrewrite.java.migrate.UpgradeToJava21 -Pexamples -pl -:querydsl-example-kotlin