@@ -206,8 +206,7 @@ public class BeanSerializerTest {
     serializer.serialize(type, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
     String generatedSource = String.valueOf(writer);
     assertThat(generatedSource)
-        .contains(
-            String.format("import %s;", GeneratedAnnotationResolver.resolveDefault().getName()));
+        .contains("import %s;".formatted(GeneratedAnnotationResolver.resolveDefault().getName()));
     assertThat(generatedSource)
         .contains("@Generated(\"com.querydsl.codegen.BeanSerializer\")\npublic class");
   }
