@@ -74,8 +74,7 @@ public class ProjectionSerializerTest {
     serializer.serialize(type, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
     String generatedSource = writer.toString();
     assertThat(generatedSource)
-        .contains(
-            String.format("import %s;", GeneratedAnnotationResolver.resolveDefault().getName()));
+        .contains("import %s;".formatted(GeneratedAnnotationResolver.resolveDefault().getName()));
     assertThat(generatedSource)
         .contains("@Generated(\"com.querydsl.codegen.DefaultProjectionSerializer\")\npublic class");
   }
