@@ -30,7 +30,7 @@ public class NumberPathTest {
     Operation<?> operation = (Operation<?>) bytePath.in(1, 2, 3);
     Constant<List<Byte>> rightArg = (Constant<List<Byte>>) operation.getArg(1);
     List<Byte> numbers = rightArg.getConstant();
-    assertThat(numbers.get(0)).isEqualTo(Byte.valueOf((byte) 1));
+    assertThat(numbers.getFirst()).isEqualTo(Byte.valueOf((byte) 1));
     assertThat(numbers.get(1)).isEqualTo(Byte.valueOf((byte) 2));
     assertThat(numbers.get(2)).isEqualTo(Byte.valueOf((byte) 3));
   }
@@ -41,7 +41,7 @@ public class NumberPathTest {
     Operation<?> operation = (Operation<?>) bytePath.notIn(1, 2, 3);
     Constant<List<Byte>> rightArg = (Constant<List<Byte>>) operation.getArg(1);
     List<Byte> numbers = rightArg.getConstant();
-    assertThat(numbers.get(0)).isEqualTo(Byte.valueOf((byte) 1));
+    assertThat(numbers.getFirst()).isEqualTo(Byte.valueOf((byte) 1));
     assertThat(numbers.get(1)).isEqualTo(Byte.valueOf((byte) 2));
     assertThat(numbers.get(2)).isEqualTo(Byte.valueOf((byte) 3));
   }
