@@ -54,8 +54,10 @@ public class MetaDataSerializerTest extends AbstractJDBCTest {
 
     // survey
     statement.execute(
-        "create table survey (id int, name varchar(30), "
-            + "CONSTRAINT PK_survey PRIMARY KEY (id, name))");
+        """
+        create table survey (id int, name varchar(30), \
+        CONSTRAINT PK_survey PRIMARY KEY (id, name))\
+        """);
 
     // date_test
     statement.execute("create table date_test (d date)");
@@ -68,20 +70,22 @@ public class MetaDataSerializerTest extends AbstractJDBCTest {
 
     // employee
     statement.execute(
-        "create table employee("
-            + "id INT, "
-            + "firstname VARCHAR(50), "
-            + "lastname VARCHAR(50), "
-            + "salary DECIMAL(10, 2), "
-            + "datefield DATE, "
-            + "timefield TIME, "
-            + "superior_id int, "
-            + "survey_id int, "
-            + "\"123abc\" int,"
-            + "survey_name varchar(30), "
-            + "CONSTRAINT PK_employee PRIMARY KEY (id), "
-            + "CONSTRAINT FK_survey FOREIGN KEY (survey_id, survey_name) REFERENCES survey(id,name), "
-            + "CONSTRAINT FK_superior FOREIGN KEY (superior_id) REFERENCES employee(id))");
+        """
+        create table employee(\
+        id INT, \
+        firstname VARCHAR(50), \
+        lastname VARCHAR(50), \
+        salary DECIMAL(10, 2), \
+        datefield DATE, \
+        timefield TIME, \
+        superior_id int, \
+        survey_id int, \
+        "123abc" int,\
+        survey_name varchar(30), \
+        CONSTRAINT PK_employee PRIMARY KEY (id), \
+        CONSTRAINT FK_survey FOREIGN KEY (survey_id, survey_name) REFERENCES survey(id,name), \
+        CONSTRAINT FK_superior FOREIGN KEY (superior_id) REFERENCES employee(id))\
+        """);
   }
 
   @Test
@@ -104,13 +108,15 @@ public class MetaDataSerializerTest extends AbstractJDBCTest {
       //
       assertFileContainsInOrder(
           "test/QSurvey.java",
-          String.format("import %s;", GeneratedAnnotationResolver.resolveDefault().getName()),
+          "import %s;".formatted(GeneratedAnnotationResolver.resolveDefault().getName()),
           "@Generated(\"com.querydsl.sql.codegen.MetaDataSerializer\")\npublic class QSurvey",
           // variable + schema constructor
-          "    public QSurvey(String variable, String schema) {\n"
-              + "        super(Survey.class, forVariable(variable), schema, \"SURVEY\");\n"
-              + "        addMetadata();\n"
-              + "    }");
+          """
+              public QSurvey(String variable, String schema) {
+                  super(Survey.class, forVariable(variable), schema, "SURVEY");
+                  addMetadata();
+              }\
+          """);
     } catch (IOException ex) {
       throw new RuntimeException(ex);
     }
@@ -162,10 +168,12 @@ public class MetaDataSerializerTest extends AbstractJDBCTest {
           "import com.querydsl.core.annotations.Generated;",
           "@Generated(\"com.querydsl.sql.codegen.MetaDataSerializer\")\npublic class QSurvey",
           // variable + schema constructor
-          "    public QSurvey(String variable, String schema) {\n"
-              + "        super(Survey.class, forVariable(variable), schema, \"SURVEY\");\n"
-              + "        addMetadata();\n"
-              + "    }");
+          """
+              public QSurvey(String variable, String schema) {
+                  super(Survey.class, forVariable(variable), schema, "SURVEY");
+                  addMetadata();
+              }\
+          """);
     } catch (IOException ex) {
       throw new RuntimeException(ex);
     }
