@@ -57,7 +57,7 @@ public class SQLSubQueryTest {
         select(employee.id, Expressions.constant("XXX"), employee.firstname).from(employee);
     List<? extends Expression<?>> exprs =
         ((FactoryExpression) subQuery.getMetadata().getProjection()).getArgs();
-    assertEquals(employee.id, exprs.get(0));
+    assertEquals(employee.id, exprs.getFirst());
     assertEquals(ConstantImpl.create("XXX"), exprs.get(1));
     assertEquals(employee.firstname, exprs.get(2));
   }
@@ -72,10 +72,12 @@ public class SQLSubQueryTest {
     serializer.handle(expr);
 
     assertEquals(
-        "(select EMPLOYEE.ID, EMPLOYEE.FIRSTNAME, EMPLOYEE.LASTNAME, EMPLOYEE.SALARY, EMPLOYEE.DATEFIELD, EMPLOYEE.TIMEFIELD, EMPLOYEE.SUPERIOR_ID, employee2.ID as col__ID7\n"
-            + "from EMPLOYEE EMPLOYEE\n"
-            + "inner join EMPLOYEE employee2\n"
-            + "on EMPLOYEE.SUPERIOR_ID = employee2.ID)",
+        """
+        (select EMPLOYEE.ID, EMPLOYEE.FIRSTNAME, EMPLOYEE.LASTNAME, EMPLOYEE.SALARY, EMPLOYEE.DATEFIELD, EMPLOYEE.TIMEFIELD, EMPLOYEE.SUPERIOR_ID, employee2.ID as col__ID7
+        from EMPLOYEE EMPLOYEE
+        inner join EMPLOYEE employee2
+        on EMPLOYEE.SUPERIOR_ID = employee2.ID)\
+        """,
         serializer.toString());
   }
 
@@ -108,7 +110,7 @@ public class SQLSubQueryTest {
         select(employee.id, Expressions.constant("XXX"), employee.firstname).from(employee);
     List<? extends Expression<?>> exprs =
         ((FactoryExpression) subQuery.getMetadata().getProjection()).getArgs();
-    assertEquals(employee.id, exprs.get(0));
+    assertEquals(employee.id, exprs.getFirst());
     assertEquals(ConstantImpl.create("XXX"), exprs.get(1));
     assertEquals(employee.firstname, exprs.get(2));
   }
@@ -177,13 +179,15 @@ public class SQLSubQueryTest {
     query.union(select(survey2.all()).from(survey2), select(survey3.all()).from(survey3));
 
     assertEquals(
-        "with survey1 as (select survey1.NAME, survey1.NAME2, survey1.ID\n"
-            + "from SURVEY survey1)\n"
-            + "(select survey2.NAME, survey2.NAME2, survey2.ID\n"
-            + "from SURVEY survey2)\n"
-            + "union\n"
-            + "(select survey3.NAME, survey3.NAME2, survey3.ID\n"
-            + "from SURVEY survey3)",
+        """
+        with survey1 as (select survey1.NAME, survey1.NAME2, survey1.ID
+        from SURVEY survey1)
+        (select survey2.NAME, survey2.NAME2, survey2.ID
+        from SURVEY survey2)
+        union
+        (select survey3.NAME, survey3.NAME2, survey3.ID
+        from SURVEY survey3)\
+        """,
         query.toString());
   }
 }
